--- a/view/docs.html
+++ b/view/docs.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Free Rest Api Dowloader search random gambar maker dan lain ya">
     <meta name="author" content="Alip">
     <meta property="og:image" content="https://telegra.ph/file/278f19dd99ebc79c85140.png">
-    <title>Alpis APIs │ Docs</title>
+    <title>Rull APIs │ Docs</title>
     <script src="https://kit.fontawesome.com/5367cb78eb.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="https://telegra.ph/file/278f19dd99ebc79c85140.png"/> 
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -325,14 +325,14 @@
                 Contact
             </div>
             <li class="nav-item">
-                <a class="nav-link" href="https://github.com/AlipBot">
-                    <i class="fab fa-fw fa-github">Github</i>
+                <a class="nav-link" href="https://www.khoirull.my.id/">
+                    <i class="fab fa-fw fa-github">My Website</i>
                     <span></span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://instagram.com/m_aliff229">
-                    <i class="fab fa-fw fa-instagram">Instagram</i>
+                <a class="nav-link" href="https://youtube.com/channel/UC1oSMQCd3XKVxYwSh4RE2Nw">
+                    <i class="fab fa-fw fa-instagram">Youtube</i>
                     <span></span>
                 </a>
             </li>
@@ -350,7 +350,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <img src="images/icon.png" class="rounded-circle shadow-4"style="width: 50px;" alt="Avatar" />
-                                <span class="ml-2 d-none d-lg-inline small font-weight-bold">Alip</span>
+                                <span class="ml-2 d-none d-lg-inline small font-weight-bold">Rull</span>
                             </a>
                         </li>
                     </ul>
@@ -361,8 +361,8 @@
                         <div class="card-body">
                             <div class="row align-items-center">
                                 <div class="col mr-2">
-                                    <div class="text-md-left font-weight-bold mb-2 text-primary">Rest Api Alip </div>
-                                    <div class="text-sm-left mb-0 font-weight-bold">Hallo Selamat Datang Rest Api Alip Free
+                                    <div class="text-md-left font-weight-bold mb-2 text-primary">Rest Api Rull </div>
+                                    <div class="text-sm-left mb-0 font-weight-bold">Hallo Selamat Datang Rest Api Rull Free
                                     </div>
                                 </div>
                                 <div class="col-auto">
@@ -470,7 +470,7 @@
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
                         Made with <i class="fa fa-heart"></i> by
-                        <a href="https://github.com/AlipBot" target="_blank" style="color: rgb(255, 234, 0);">AlipBot🇲🇾</a>
+                        <a href="https://www.khoirull.my.id/" target="_blank" style="color: rgb(255, 234, 0);">KhrlMstfa⚡</a>
                         </span>
                     </div>
                 </div>
